added kafka topic and notificate and connection related apis