@@ -1,18 +1,17 @@
 package com.linkedin.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.linkedin.auth.UserContextHolder;
-import com.linkedin.clients.ConnectionsClient;
-import com.linkedin.dto.PersonDto;
 import com.linkedin.dto.PostCreateRequestDto;
 import com.linkedin.dto.PostDto;
 import com.linkedin.entity.Post;
+import com.linkedin.event.PostCreatedEvent;
 import com.linkedin.exception.ResourceNotFoundException;
 import com.linkedin.repository.PostsRepository;
 
@@ -27,25 +26,25 @@ public class PostsService {
 
 	private final PostsRepository postsRepository;
 	private final ModelMapper modelMapper;
-	private final ConnectionsClient connectionsClient;
+	private final KafkaTemplate<Long, PostCreatedEvent> kafkaTemplate;
 
-	public PostDto createPost(final PostCreateRequestDto postDto, final Long userId) {
+	public PostDto createPost(final PostCreateRequestDto postDto) {
+		Long userId = UserContextHolder.getCurrentUserId();
 		Post post = modelMapper.map(postDto, Post.class);
 		post.setUserId(userId);
 
 		Post savedPost = postsRepository.save(post);
+
+		PostCreatedEvent postCreatedEvent = PostCreatedEvent.builder().postId(savedPost.getId()).creatorId(userId)
+				.content(savedPost.getContent()).build();
+
+		kafkaTemplate.send("post-created-topic", postCreatedEvent);
+
 		return modelMapper.map(savedPost, PostDto.class);
 	}
 
 	public PostDto getPostById(final Long postId) {
 		log.debug("Retrieving post with ID: {}", postId);
-
-		Long userId = UserContextHolder.getCurrentUserId();
-
-		List<PersonDto> firstConnections = connectionsClient.getFirstConnections();
-
-//	        TODO send Notifications to all connections
-
 		Post post = postsRepository.findById(postId)
 				.orElseThrow(() -> new ResourceNotFoundException("Post not found with id: " + postId));
 		return modelMapper.map(post, PostDto.class);
@@ -54,6 +53,6 @@ public class PostsService {
 	public List<PostDto> getAllPostsOfUser(final Long userId) {
 		List<Post> posts = postsRepository.findByUserId(userId);
 
-		return posts.stream().map((element) -> modelMapper.map(element, PostDto.class)).collect(Collectors.toList());
+		return posts.stream().map(element -> modelMapper.map(element, PostDto.class)).toList();
 	}
 }
